test/e2e/failing/libs.js
const Chance = require('chance');

module.exports = { chance: new Chance() };
